Added index.html page and style.css

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,28 @@
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <title>tic tac toe</title>
+    <link rel="stylesheet" href="./style.css"/>
+  </head>
+
+  <header>
+    <h1>Welcome to the world of Tic Tac Toe! </h1>
+  </header>
+
+  <body>
+    
+    <div>
+        <link href="https://fonts.googleapis.com/css2?family=Grenze&family=Grenze+Gotisch:wght@200;300&display=swap"
+            rel="stylesheet">
+    </div>
+
+    <!-- <img src="https://store-images.s-microsoft.com/image/apps.3907.9007199266250076.96c3eac7-7269-4364-997b-83ef436ca137.b6355164-ef37-4aeb-bd30-f9921ee70e49?mode=scale&q=90&h=1080&w=1920"> -->
+
+   
+ 
+
+
 
 <!-- new user -->
 <section>
@@ -56,4 +81,21 @@
     </div> -->
   </form>
 
+  <form action="https://tic-tac-snow.herokuapp.com/signin" method="post">
+    <input type="submit" value="Start a game">
+  </form>
+
+  <form action="https://tic-tac-snow.herokuapp.com/signup" method="post">
+    <input type="submit" value="Start a game">
+  </form>
+
+
+
+  <!-- <button>
+    Next Page!
+</button> -->
+
+</body>
+
 </section>
+</html>
