--- a/public/lobby.html
+++ b/public/lobby.html
@@ -1,9 +1,18 @@
-<section id="gamefinder">
-
-  <form action="(put game route here)" method="post">
-
-    <input type="button" value="Find a game">
-    
-  </form>
-
-</section>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lobby</title>
+  </head>
+  <body>
+    <header>
+      <h2>Start a game</h2>
+    </header>
+    <main>
+      <section id="gamefinder">
+        <form action="https://tic-tac-snow.herokuapp.com/game" method="post">
+          <input type="submit" value="Start a game">
+        </form>
+      </section>
+    </main>
+  </body>
+</html>
